<resources>
    <string name="app_name">TrafficSign</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_btn">PLAY</string>
    <string name="logo_img">logoimg</string>
    <string name="warning_sign">WARNING SIGN</string>
    <string name="stop_sign">STOP SIGN</string>

    <string name="play_button_message">You clicked to play game.</string>
    <string name="warning_button_message">You clicked to view warning sign.</string>
    <string name="stop_button_message">You clicked to view stop sign.</string>
    <string name="share_success">Share Success!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="title_traffic_sign">Traffic Sign (%1$d/%2$d)</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="firstanswerradiobutton">RadioButton</string>
    <string name="questionimage">questionimage</string>
    <string name="secondanswerradiobutton">RadioButton</string>
    <string name="thirdanswerradiobutton">RadioButton</string>
    <string name="congratulationtext">CONGRATULATION!!</string>
    <string name="homebtn">HOME</string>
    <string name="wintext">YOU WIN!!</string>
    <string name="losetext">YOU LOSE!!</string>
    <string name="tryagainbtn">TRY AGAIN</string>
    <string name="aboutmetext">59160581 Benyapa Thakoengsuk</string>
    <string name="abouttext">ABOUT</string>
    <string name="aboutimage" />
    <string name="rulestext">RULES</string>
    <string name="rulesdescriptext">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.  If you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="warningsignimg" />
    <string name="stopsignimg">TODO</string>

</resources>
