<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background04">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="254dp"
                android:layout_height="272dp"
                android:contentDescription="@string/logo_img"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/play_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/play_btn"
                android:layout_width="196dp"
                android:layout_height="69dp"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="110dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/play_btn"
                app:layout_constraintBottom_toTopOf="@+id/warning_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/warning_btn"
                android:layout_width="198dp"
                android:layout_height="69dp"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="110dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/warning_sign"
                app:layout_constraintBottom_toTopOf="@+id/stop_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_btn" />

            <Button
                android:id="@+id/stop_btn"
                android:layout_width="198dp"
                android:layout_height="69dp"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="110dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/stop_sign"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warning_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
