<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/aboutimage"
            android:layout_width="286dp"
            android:layout_height="370dp"
            android:src="@drawable/mmxlkk"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abouttext"
            android:contentDescription="@string/aboutimage" />

        <TextView
            android:id="@+id/abouttext"
            android:layout_width="131dp"
            android:layout_height="34dp"
            android:layout_marginTop="32dp"
            android:background="#8856E2"
            android:text="@string/abouttext"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="378dp"
            android:layout_height="34dp"
            android:background="#A679F0"
            android:text="@string/aboutmetext"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutimage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>